# mpi_openacc

./: CMakeLists.txt  common.h  laplace2d.c  laplace2d_serial.h  laplace2d_solution.c
